# teketeke

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
client/: button.js  index.html
docs/: usecases.md  usecases.plantuml
menu/: Cargo.toml
menu/src/: main.rs
src/: main.rs
test_scripts/: excercice001.sh  excercice005.sh  excercice006.sh
